# tp20-c

./: .travis.yml  CMakeLists.txt  README.md
example/: input.txt  layers.txt
example/dense1/: matrix.txt  vector.txt
example/dense2/: vector.txt
linters/cpplint/: cpplint.py
project/include/: matrix.h  matrix_opt.h  nn.h  nn_opt.h
project/src/: main.c  main_opt.c  matrix.c  matrix_opt.c  nn.c  nn_opt.c
tests/: utils.cpp
